# capstone6team

./: .gitignore  README.md  et -e
.claude/: settings.local.json
.github/: .gitignore
.github/workflows/: cd-front.yml  cd-main.yml  cd-server.yml  ci-front.yml  ci-main.yml  ci-server.yml  ci-test.yml  ci.yml  deploy-grading-server.yml  frontend-ci.yml
DB/: docker-compose.yml  schema.sql
algorithms-server/: CMakeLists.txt  algorithms-server.cpp
db/: docker-compose.yml  schema.sql
docs4capstone/: 00MANIFEST.md  mydocs-api-signup-mail-flow.md  mydocs-local-network-access.md
example/apple_game/: bot  bot1  exampleAI_1  judge  sample_ai.cpp
example/chain_reaction/: judge.cpp  log_visualization.html  sample_code.cpp  soloPlay.html  대회명세.md
example/competition_example/: ajs-battle-code.cpp  ajs_code.cpp  battle_code  judge  judge.cpp  sample_ai_01.cpp  sample_code.cpp
example/dots_and_boxes/: judge.cpp  log_visualization.html  sample_code.cpp  soloPlay.html  대회명세.md
example/flood_fill_war/: judge.cpp  log_visualization.html  sample_code.cpp  soloPlay.html  대회명세.md
example/yut/: judge.cpp  rule.md  sample_code.cpp
front/: .gitattributes  .gitignore  README.md  package-lock.json  package.json  tsconfig.json
front/docs4capstone/: 00MANIFEST.md
front/public/: chito_battle_log.html  chito_battle_self.html  index.html  softcon.html
front/src/: App.tsx  contestDraft.test.ts  contestDraft.ts  index.css  setupTests.ts
grading-server/: CMakeLists.txt  Dockerfile  grading-server.cpp
grading-server/.github/workflows/: deploy-grading-server.yml
server/: .gitignore  Dockerfile  build.gradle  deploy.sh
(+321 files in other folders)
